# GMatElastic

./: .appveyor.yml  .ci_environment_docs.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Cartesian2d_8h.html  Cartesian2d_8h.js  Cartesian2d_8h_source.html  Cartesian2d_8hpp.html  Cartesian2d_8hpp.js  Cartesian2d_8hpp_source.html  Cartesian2d__Array_8hpp.html  Cartesian2d__Array_8hpp_source.html  Cartesian3d_8hpp.html  Cartesian3d_8hpp.js  Cartesian3d_8hpp_source.html  Cartesian3d__Array_8hpp.html  Cartesian3d__Array_8hpp_source.html  GMatElastic.pc.in  GMatElasticConfig.cmake  GMatElasticConfig.cmake.in  GMatLinearElastic.pc.in  GMatLinearElasticConfig.cmake.in  README.md  annotated.html  annotated_dup.js  classGMatElastic_1_1Cartesian3d_1_1Elastic-members.html  classGMatElastic_1_1Cartesian3d_1_1Elastic.html  classGMatElastic_1_1Cartesian3d_1_1Elastic.js  classGMatTensor_1_1Cartesian2d_1_1Array-members.html  classGMatTensor_1_1Cartesian2d_1_1Array.html  classGMatTensor_1_1Cartesian2d_1_1Array.js  classGMatTensor_1_1Cartesian3d_1_1Array-members.html  classGMatTensor_1_1Cartesian3d_1_1Array.html  classGMatTensor_1_1Cartesian3d_1_1Array.js  classes.html  detail_8hpp.html  detail_8hpp_source.html  dir_11732965991e0c534dae4679e97a579d.html  (+59 more)
.github/workflows/: ci.yml  gh-pages.yml
docs/: api_cpp.rst  api_python.rst  conf.py  goose-article.cls  index.rst  readme.tex
docs/examples/: consistency.py  stress-strain.py
docs/theory/: goose-article.cls  library.bib  readme.tex
docs/theory/examples/: consistency.py  stress-strain.py
docs/theory/figures/: consistency.idraw
include/GMatElastic/: Cartesian3d.h  Cartesian3d.hpp  Cartesian3d_Array.hpp  Cartesian3d_Elastic.hpp  Cartesian3d_Matrix.hpp  config.h  version.h  version.hpp
include/GMatLinearElastic/: Cartesian3d.h  Cartesian3d.hpp  GMatLinearElastic.h  config.h  python.cpp
python/: main.cpp
python/GMatElastic/: Cartesian3d.py  __init__.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_1.js
test/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py  main.cpp
test/compare_versions/: Cartesian3d_check_main.py  Cartesian3d_check_v0.1.0.py  Cartesian3d_generate.py
tests/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py  test_Cartesian3d.py  test_version.py
tests/compare_versions/: Cartesian3d_check_main.py  Cartesian3d_check_v0.1.0.py  Cartesian3d_check_v0.2.2.py  Cartesian3d_generate.py
